--- a/03-observable-subscription-management/package.json
+++ b/03-observable-subscription-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01-hello",
+  "name": "03-observable-subscription-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
